--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,23 @@
 
 # misc
 .DS_Store
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.env
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Vercel
+.vercel
+# Local Netlify folder
+.netlify
